deploy: 43c7d98bf415374d89c30fb47fd6ca072a259cc8

--- a/recipes/bacon-potato-and-split-pea-soup/index.html
+++ b/recipes/bacon-potato-and-split-pea-soup/index.html
@@ -11,11 +11,11 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@400;500&display=swap" onload="this.onload=null;this.rel='stylesheet'">
 
 
 
-<link rel="stylesheet" href="../../scss/main.min.be588b3d120141efcf2b8a68c20cb46f26857995dab56d5cd6df0d1837533392.css"  integrity="sha256-vliLPRIBQe/PK4powgy0byaFeZXatW1c1t8NGDdTM5I=">
+<link rel="stylesheet" href="../../scss/main.min.ed084f8b746040a5b578f124cdf39af3ab2e703421b7ee8ef49fb312fffe01f2.css"  integrity="sha256-7QhPi3RgQKW1ePEkzfOa86sucDQht&#43;6O9J&#43;zEv/&#43;AfI=">
 
     <title>Bacon, Potato And Split Pea Soup | CompSoc Cookbook</title>
     <meta property="og:title" content="Bacon, Potato And Split Pea Soup" />
