deploy: 43c7d98bf415374d89c30fb47fd6ca072a259cc8

--- a/difficulties/1-medium/index.html
+++ b/difficulties/1-medium/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" href="../../scss/main.min.ed084f8b746040a5b578f124cdf39af3ab2e703421b7ee8ef49fb312fffe01f2.css"  integrity="sha256-7QhPi3RgQKW1ePEkzfOa86sucDQht&#43;6O9J&#43;zEv/&#43;AfI=">
+<link rel="stylesheet" href="../../scss/main.min.b39bd0d2b82c79c6f281930acf693f397533ccc646044ce816d8a2c8ea0c5420.css"  integrity="sha256-s5vQ0rgsecbygZMKz2k/OXUzzMZGBEzoFtiiyOoMVCA=">
 
     <title>Browsing all 1-medium dishes | CompSoc Cookbook</title>
     <meta property="og:title" content="List of all dishes marked as 1-medium" />
