--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" href="./scss/main.min.ed084f8b746040a5b578f124cdf39af3ab2e703421b7ee8ef49fb312fffe01f2.css"  integrity="sha256-7QhPi3RgQKW1ePEkzfOa86sucDQht&#43;6O9J&#43;zEv/&#43;AfI=">
+<link rel="stylesheet" href="./scss/main.min.b39bd0d2b82c79c6f281930acf693f397533ccc646044ce816d8a2c8ea0c5420.css"  integrity="sha256-s5vQ0rgsecbygZMKz2k/OXUzzMZGBEzoFtiiyOoMVCA=">
 
     <title>CompSoc Cookbook</title>
     <meta property="og:title" content="CompSoc Cookbook" />
@@ -96,7 +96,7 @@
       <main>
         <section class="mb-5 pb-5">
           <h1 class="display-2 text-center mb-3">CompSoc CookBook</h1>
-          <div class="h4 text-center mb-5">Hey, good lookin&#39;, whatcha got cookin&#39;?</div>
+          <h4 class="display-6 text-bold text-center mb-5">Hey, good lookin&#39;, whatcha got cookin&#39;?</h4>
           <p>
             CompSoc Cookbook is a curated list of recipes by CompSoc Edinburgh members.
           </p>
@@ -107,7 +107,7 @@
         <hr>
         <section class="my-5 py-2">
           <div class="d-block d-lg-flex justify-content-between mb-3">
-            <h2 class="mb-3">Most Recently Updated Recipes</h2>
+            <h2 class="display-5 text-bold mb-3">Most Recently Updated Recipes</h2>
             <p><a href="recipes" class="btn btn-outline-primary">View all Recipes</a></p>
           </div>
           <ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-3">
