--- a/meals/main_courses/index.html
+++ b/meals/main_courses/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" href="../../scss/main.min.b39bd0d2b82c79c6f281930acf693f397533ccc646044ce816d8a2c8ea0c5420.css"  integrity="sha256-s5vQ0rgsecbygZMKz2k/OXUzzMZGBEzoFtiiyOoMVCA=">
+<link rel="stylesheet" integrity="sha256-s5vQ0rgsecbygZMKz2k/OXUzzMZGBEzoFtiiyOoMVCA=" href="../../scss/main.min.b39bd0d2b82c79c6f281930acf693f397533ccc646044ce816d8a2c8ea0c5420.css">
 
     <title>Browsing all main_courses dishes | CompSoc Cookbook</title>
     <meta property="og:title" content="List of all main_courses" />
@@ -464,12 +464,19 @@
 
     </div>
     
-<script type="text/javascript" src="../../bootstrap/js/dist/dom/data.min.js"></script>
-<script type="text/javascript" src="../../bootstrap/js/dist/dom/event-handler.min.js"></script>
-<script type="text/javascript" src="../../bootstrap/js/dist/dom/manipulator.min.js"></script>
-<script type="text/javascript" src="../../bootstrap/js/dist/dom/selector-engine.min.js"></script>
-<script type="text/javascript" src="../../bootstrap/js/dist/base-component.min.js"></script>
-<script type="text/javascript" src="../../bootstrap/js/dist/collapse.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/dom/data.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/dom/event-handler.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/dom/manipulator.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/dom/selector-engine.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/base-component.min.js"></script>
+
+<script type="text/javascript" integrity="" src="../../bootstrap/js/dist/collapse.min.js"></script>
+
 
   </body>
 </html>
