deploy: 10c082b0e1157d0ecf498b2bba4e950788b43832

--- a/404.html
+++ b/404.html
@@ -14,13 +14,13 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-s7FDyRQnzFoZtN4AjkAhJnQhedGY9nHp2UXr6sKG44g=" href="https://cookbook.betterinformatics.com/scss/main.min.b3b143c91427cc5a19b4de008e402126742179d198f671e9d945ebeac286e388.css">
+<link rel="stylesheet" integrity="sha256-s7FDyRQnzFoZtN4AjkAhJnQhedGY9nHp2UXr6sKG44g=" href="https://cookbook.comp-soc.com/scss/main.min.b3b143c91427cc5a19b4de008e402126742179d198f671e9d945ebeac286e388.css">
 
     <title>CompSoc Cookbook</title>
     <meta property="og:title" content="404" />
     <meta property="og:description" content="This page doesn't exist!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
+    <meta property="og:url" content="https://cookbook.comp-soc.com" />
   </head>
   <body>
     <div class="container">
@@ -41,7 +41,7 @@
       </div>
 
       <div class="collapse navbar-collapse d-lg-flex" id="navbarSupportedContent">
-        <a class="navbar-brand flex-fill" href="https://cookbook.betterinformatics.com/" title="Back to Home">
+        <a class="navbar-brand flex-fill" href="https://cookbook.comp-soc.com/" title="Back to Home">
           
           <img
             src="/img/cookbook-horizontal.svg"
@@ -111,17 +111,17 @@
     </div>
     
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/dom/data.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/dom/data.min.js"></script>
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/dom/event-handler.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/dom/event-handler.min.js"></script>
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/dom/manipulator.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/dom/manipulator.min.js"></script>
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/dom/selector-engine.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/dom/selector-engine.min.js"></script>
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/base-component.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/base-component.min.js"></script>
 
-<script type="text/javascript" integrity="" src="https://cookbook.betterinformatics.com/bootstrap/js/dist/collapse.min.js"></script>
+<script type="text/javascript" integrity="" src="https://cookbook.comp-soc.com/bootstrap/js/dist/collapse.min.js"></script>
 
 
   </body>
