--- a/recipes/brazilian-coconut-chicken/index.html
+++ b/recipes/brazilian-coconut-chicken/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-Yab/UEOsnorCvf95X3ivqklO62oiJOz77aordxKvlXQ=" href="https://cookbook.comp-soc.com/scss/main.min.61a6ff5043ac9e8ac2bdff795f78afaa494eeb6a2224ecfbedaa2b7712af9574.css">
+<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
 
     <title>Brazilian Coconut Chicken | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -105,17 +105,7 @@
 </header>
 
       <main>
-        <article class="recipe position-relative">
-          
-          <div class="d-none d-lg-block recipe-edit-button position-absolute top-0 end-0">
-            <a href="https://github.com/compsoc-edinburgh/cook-book/edit/main/main_courses/1-medium/brazilian-coconut-chicken.md">
-              <svg class="edit-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
-                <path d="M0 0h24v24H0V0z" fill="none"/>
-                <path d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z"/>
-              </svg>
-              Edit on GitHub
-            </a>
-          </div>
+        <article class="recipe">
           
           <div class="d-flex flex-column align-items-center mb-5">
             <div class="recipe-keywords">
@@ -173,6 +163,15 @@ until tender. Mix in the tomatoes and continue cooking. Stir in the coconut milk
               </div>
             </div>
           </section>
+          <div class="d-none d-lg-block text-center recipe-edit-button mb-5">
+            <a href="https://github.com/compsoc-edinburgh/cook-book/edit/main/main_courses/1-medium/brazilian-coconut-chicken.md">
+              <svg class="edit-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
+                <path d="M0 0h24v24H0V0z" fill="none"/>
+                <path d="M14.06 9.02l.92.92L5.92 19H5v-.92l9.06-9.06M17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29zm-3.6 3.19L3 17.25V21h3.75L17.81 9.94l-3.75-3.75z"/>
+              </svg>
+              Edit on GitHub
+            </a>
+          </div>
         </article>
       </main>
       <footer>
