deploy: c01a82f9e6b70de446c0cb06f223768287b52ada

--- a/difficulties/0-easy/index.html
+++ b/difficulties/0-easy/index.html
@@ -18,7 +18,7 @@
 
     <title>Browsing all 0-easy dishes | CompSoc Cookbook</title>
     <meta property="og:title" content="List of all dishes marked as 0-easy" />
-    <meta property="og:description" content="There are 14 recipes with the difficulty 0-easy!" />
+    <meta property="og:description" content="There are 15 recipes with the difficulty 0-easy!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cookbook.comp-soc.com" />
   </head>
@@ -99,6 +99,18 @@
           <a class="btn btn-outline-primary" href="/recipes?difficulties=0-easy">Search with this filter</a>
         </div>
         <ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
+  
+    <li class="recipe-listing-item col">
+      <a href="/recipes/pink-lady/">
+        <div class="card h-100"  role="article">
+          
+          <div class="card-body">
+            <span class="meta">cocktails / 0-easy</span>
+            <h4 class="display-5 mt-lg-3">Pink Lady</h2>
+          </div>
+        </div>
+      </a>
+    </li>
   
     <li class="recipe-listing-item col">
       <a href="/recipes/spanish-eggs/">
