--- a/meals/cocktails/index.html
+++ b/meals/cocktails/index.html
@@ -18,7 +18,7 @@
 
     <title>Browsing all cocktails dishes | CompSoc Cookbook</title>
     <meta property="og:title" content="List of all cocktails" />
-    <meta property="og:description" content="There are 2 recipes that are classified as cocktails!" />
+    <meta property="og:description" content="There are 3 recipes that are classified as cocktails!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cookbook.comp-soc.com" />
   </head>
@@ -99,6 +99,18 @@
           <a class="btn btn-outline-primary" href="/recipes?meals=cocktails">Search with this filter</a>
         </div>
         <ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
+  
+    <li class="recipe-listing-item col">
+      <a href="/recipes/pink-lady/">
+        <div class="card h-100"  role="article">
+          
+          <div class="card-body">
+            <span class="meta">cocktails / 0-easy</span>
+            <h4 class="display-5 mt-lg-3">Pink Lady</h2>
+          </div>
+        </div>
+      </a>
+    </li>
   
     <li class="recipe-listing-item col">
       <a href="/recipes/wikipedia_pina_colada/">
