--- a/recipes/index.html
+++ b/recipes/index.html
@@ -515,15 +515,16 @@
           </section>
           <section class="col-12 col-lg-9">
             <div class="add-recipe row row-cols-1 mb-4 d-none d-lg-block">
-              <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0akeywords%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20father%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Add your own recipe!</h5>
-                    <p class="card-text">The format is <i>super</i> simple, it won't take minutes!</p>
-                  </div>
-                </div>
-              </a>
-            </div>
+  <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0akeywords%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20father%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Add your own recipe!</h5>
+        <p class="card-text">Click here to create a Pull Request. The format is <i>super</i> simple, it won't take minutes!</p>
+      </div>
+    </div>
+  </a>
+</div>
+
             <noscript>
               Searching or filtering is not possible without JavaScript enabled. You can, however, view all recipes as a list <a href="view-all">here</a>.
             </noscript>
