--- a/recipes/view-all/index.html
+++ b/recipes/view-all/index.html
@@ -86,15 +86,28 @@
           <h2 class="display-5 text-bold mb-3">You may also want to</h2><a href="/difficulties/" class="btn btn-outline-primary">Browse by <b>Difficulties</b></a><a href="/meals/" class="btn btn-outline-primary">Browse by <b>Meals</b></a><a href="/tags/" class="btn btn-outline-primary">Browse by <b>Tags</b></a>
         </section>
         <div class="add-recipe row row-cols-1 mb-4 d-none d-lg-block">
-          <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0akeywords%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20father%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Add your own recipe!</h5>
-                <p class="card-text">The format is <i>super</i> simple, it won't take minutes!</p>
-              </div>
-            </div>
-          </a>
-        </div><ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
+  <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0akeywords%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20father%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Add your own recipe!</h5>
+        <p class="card-text">Click here to create a Pull Request. The format is <i>super</i> simple, it won't take minutes!</p>
+      </div>
+    </div>
+  </a>
+</div>
+<ol class="recipe-listing row row-cols-2 row-cols-lg-4 g-4">
+  
+    <li class="recipe-listing-item col">
+      <a href="/recipes/pink-lady/">
+        <div class="card h-100"  role="article">
+          
+          <div class="card-body">
+            <span class="meta">cocktails / 0-easy</span>
+            <h4 class="display-5 mt-lg-3">Pink Lady</h2>
+          </div>
+        </div>
+      </a>
+    </li>
   
     <li class="recipe-listing-item col">
       <a href="/recipes/spanish-eggs/">
