deploy: 86584374f13da1fc05030c3a1508f507aced783a

--- a/meals/index.html
+++ b/meals/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
+<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
 
     <title>Browsing all meals | CompSoc Cookbook</title>
     <meta property="og:title" content="List of all meals" />
