--- a/recipes/index.html
+++ b/recipes/index.html
@@ -14,7 +14,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
+<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
 
     <title>Recipes | CompSoc Cookbook</title>
     <meta property="og:title" content="Recipes" />
@@ -515,7 +515,7 @@
           </section>
           <section class="col-12 col-lg-9">
             <div class="add-recipe row row-cols-1 mb-4 d-none d-lg-block">
-  <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0akeywords%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20father%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
+  <a href="https://github.com/compsoc-edinburgh/cook-book/new/main/?filename=main_courses/0-easy/foo.md&value=---%0atags%3a%20%5bbabylonian%2c%20fresh%2c%20vegetarian%2c%20thisisoptional%5d%0aallergens%3a%20%5bmilk%2c%20gluten%2c%20celery%2c%20crustaceans%2c%20eggs%2c%20fish%2c%20lupin%2c%20milk%2c%20molluscs%2c%20mustard%2c%20nuts%2c%20peanuts%2c%20sesame_seeds%2c%20soya%2c%20sulphites%5d%0aserves%3a%2030%20cookies%0aprep%20time%3a%2015%20mins%0aanything%20you%20want%3a%20goes%20here%0a---%0a%0a%23%20Grandma%27s%20Milk%20Chocolate%20Cookies%0a%0aThey%20always%20turn%20out%20delicious%21%0a%0a%23%23%20Ingredients%0a%0a%2a%2030g%20of%20molten%20hearts%0a%2a%2070g%20of%20unsalted%20butter%0a%2a%20100ml%20milk%0a%0a%23%23%20Blahblah%0a%0awhatever%20markdown%20you%20want%0a&message=add%20my%20&delicious%20recipe">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Add your own recipe!</h5>
@@ -562,6 +562,6 @@
 
 
     
-    <script async src="https://cookbook.comp-soc.com/js/search.min.b9f4a05007268669ae6bbc77e52436625e259333906a344657288d3db7f5f58b.js" integrity="sha256-ufSgUAcmhmmua7x35SQ2Yl4lkzOQajRGVyiNPbf19Ys="></script>
+    <script async src="https://cookbook.comp-soc.com/js/search.min.6fad815d9d05eac0f32270fa99b92a392aa1f1ba063673d50a7dc07b9b390b8f.js" integrity="sha256-b62BXZ0F6sDzInD6mbkqOSqh8boGNnPVCn3Ae5s5C48="></script>
   </body>
 </html>
