--- a/recipes/chocolate-cupcakes/index.html
+++ b/recipes/chocolate-cupcakes/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
+<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
 
     <title>Chocolate cupcakes | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -127,7 +127,9 @@ Ingredients For the cupcake
             </div>
             <h1 class="display-2 mb-4 text-center">Chocolate cupcakes</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Prep Time<br>
+              <div class="recipe-property text-center mx-3">Originalfilename<br>
+                <b>chocolate-cupcakes.md</b>
+              </div><div class="recipe-property text-center mx-3">Prep Time<br>
                 <b>1 hour</b>
               </div><div class="recipe-property text-center mx-3">Serves<br>
                 <b>12 cupcakes</b>
