--- a/recipes/pink-lady/index.html
+++ b/recipes/pink-lady/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
+<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
 
     <title>Pink Lady | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -128,6 +128,8 @@ Ingredients  3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A
                 <b>eggs</b>
               </div><div class="recipe-property text-center mx-3">Keywords<br>
                 <b>[fruity]</b>
+              </div><div class="recipe-property text-center mx-3">Originalfilename<br>
+                <b>pink-lady.md</b>
               </div><div class="recipe-property text-center mx-3">Prep Time<br>
                 <b>3 Mins</b>
               </div><div class="recipe-property text-center mx-3">Serves<br>
