--- a/recipes/stuffed-peppers/index.html
+++ b/recipes/stuffed-peppers/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-zfONCuOvSwIg9SMZTepDXaLUyhskzqebcT8XW7ndBog=" href="https://cookbook.comp-soc.com/scss/main.min.cdf38d0ae3af4b0220f523194dea435da2d4ca1b24cea79b713f175bb9dd0688.css">
+<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
 
     <title>Stuffed peppers with mushrooms | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -125,7 +125,9 @@ Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely cho
             </div>
             <h1 class="display-2 mb-4 text-center">Stuffed peppers with mushrooms</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Originalfilename<br>
+                <b>stuffed-peppers.md</b>
+              </div><div class="recipe-property text-center mx-3">Serves<br>
                 <b>8-11</b>
               </div>
             </div>
