deploy: 86584374f13da1fc05030c3a1508f507aced783a

--- a/recipes/chocolate-cupcakes/index.html
+++ b/recipes/chocolate-cupcakes/index.html
@@ -127,9 +127,7 @@ Ingredients For the cupcake
             </div>
             <h1 class="display-2 mb-4 text-center">Chocolate cupcakes</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>chocolate-cupcakes.md</b>
-              </div><div class="recipe-property text-center mx-3">Prep Time<br>
+              <div class="recipe-property text-center mx-3">Prep Time<br>
                 <b>1 hour</b>
               </div><div class="recipe-property text-center mx-3">Serves<br>
                 <b>12 cupcakes</b>
