--- a/recipes/chocolate-roll/index.html
+++ b/recipes/chocolate-roll/index.html
@@ -123,9 +123,7 @@ Ingredients  200g butter biscuits (you can add more to taste - Leibniz type bisc
             </div>
             <h1 class="display-2 mb-4 text-center">Chocolate roll</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>chocolate-roll.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>an entire family</b>
               </div>
             </div>
