--- a/recipes/instant-pot-spaghetti-meat-sauce/index.html
+++ b/recipes/instant-pot-spaghetti-meat-sauce/index.html
@@ -123,9 +123,7 @@ Ingredients  8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground 
             </div>
             <h1 class="display-2 mb-4 text-center">Instant Pot Spaghetti &amp; Meat Sauce</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>instant-pot-spaghetti-meat-sauce.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>4</b>
               </div>
             </div>
