--- a/recipes/stuffed-peppers/index.html
+++ b/recipes/stuffed-peppers/index.html
@@ -125,9 +125,7 @@ Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely cho
             </div>
             <h1 class="display-2 mb-4 text-center">Stuffed peppers with mushrooms</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>stuffed-peppers.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>8-11</b>
               </div>
             </div>
