--- a/recipes/bacon-potato-and-split-pea-soup/index.html
+++ b/recipes/bacon-potato-and-split-pea-soup/index.html
@@ -121,9 +121,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">Bacon, Potato And Split Pea Soup</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>bacon-potato-and-split-pea-soup.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>6</b>
               </div>
             </div>
