--- a/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
+++ b/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
@@ -124,9 +124,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">Baked Sausage With Sweet Potato And Fennel</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>baked-sausage-with-sweet-potato-and-fennel.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>4</b>
               </div>
             </div>
