--- a/recipes/chicken-and-lentil-dahl/index.html
+++ b/recipes/chicken-and-lentil-dahl/index.html
@@ -121,9 +121,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">Chicken and Lentil Dahl</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>chicken-and-lentil-dahl.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>4</b>
               </div>
             </div>
