--- a/recipes/chorizo-and-pearl-barley-risotto/index.html
+++ b/recipes/chorizo-and-pearl-barley-risotto/index.html
@@ -121,9 +121,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">Chorizo and Pearl Barley Risotto</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>chorizo-and-pearl-barley-risotto.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>4</b>
               </div>
             </div>
