--- a/recipes/slow-cooker-honey-sriracha-chicken/index.html
+++ b/recipes/slow-cooker-honey-sriracha-chicken/index.html
@@ -121,9 +121,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">Slow Cooker Honey Sriracha Chicken</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>slow-cooker-honey-sriracha-chicken.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>4</b>
               </div>
             </div>
