--- a/recipes/spanish-eggs/index.html
+++ b/recipes/spanish-eggs/index.html
@@ -121,9 +121,7 @@
             </div>
             <h1 class="display-2 mb-4 text-center">&#34;Spanish&#34; Eggs</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">Originalfilename<br>
-                <b>spanish-eggs.md</b>
-              </div><div class="recipe-property text-center mx-3">Serves<br>
+              <div class="recipe-property text-center mx-3">Serves<br>
                 <b>3</b>
               </div>
             </div>
