deploy: adb3e9e94b424577bccb74183861cfde65754a30

--- a/recipes/instant-pot-spaghetti-meat-sauce/index.html
+++ b/recipes/instant-pot-spaghetti-meat-sauce/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
+<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
 
     <title>Instant Pot Spaghetti &amp; Meat Sauce | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
