--- a/recipes/pink-lady/index.html
+++ b/recipes/pink-lady/index.html
@@ -15,7 +15,7 @@
 
 
 
-<link rel="stylesheet" integrity="sha256-B2NXs865hILLj0z4KEY3f/izgSk3KXi&#43;Aph5FJomQYA=" href="https://cookbook.comp-soc.com/scss/main.min.076357b3ceb98482cb8f4cf82846377ff8b38129372978be029879149a264180.css">
+<link rel="stylesheet" integrity="sha256-P94CEbBWKX3LJQgBKYvtmj5fZdv59rQyJtXCn5RRozE=" href="https://cookbook.comp-soc.com/scss/main.min.3fde0211b056297dcb250801298bed9a3e5f65dbf9f6b43226d5c29f9451a331.css">
 
     <title>Pink Lady | CompSoc Cookbook</title>
     <meta name="twitter:card" content="summary_large_image" />
@@ -123,7 +123,7 @@ Ingredients  3-4 Ice Cubes (Crushed) 1 Tsp Grenadine 1 Measure Gin 1 Egg White A
             </div>
             <h1 class="display-2 mb-4 text-center">Pink Lady</h1>
             <div class="recipe-properties d-flex">
-              <div class="recipe-property text-center mx-3">
+              <div class="recipe-property recipe-allergens text-center mx-3">
                 Contains<br>
                 <b>eggs</b>
               </div><div class="recipe-property text-center mx-3">Keywords<br>
